[package]
name = "rust-spectre"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # PENTING: Mengubah output menjadi .wasm

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Kita butuh akses ke Browser API (Window, Document, Fetch)
[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlDocument",
  "Navigator",
  "Location",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
  "HtmlElement"
]